# Tiny_C_Compiler

./: .gitignore  CMakeLists.txt  README.md  grammar.txt  main.cpp  test.sh
FiniteAutomata/: .~lock.FAC.csv#  FAC.csv  gen.py  output.txt  tokenDescriptions.regex
includes/: args.hxx  arguments.h  asm_directive.h  asm_element.h  asm_label.h  asm_section.h  assembly.h  commands.h  converter.h  data_type.h  declaration_specifiers.h  dfa.h  evaluator.h  lexical_errors.h  nodes.h  parser.h  scope_tree.h  semantic_analyzer.h  specifier_qualifier.h  specifier_qualifier_list.h  symbol_table.h  symbols.h  syntax_errors.h  syntax_tree.h  tcc_exceptions.h  token.h  tokenizer.h  type_builder.h  value_category.h
includes/errors/: compilation_error.h  lexical_errors.h  semantic_errors.h  syntax_errors.h  tcc_exceptions.h
includes/nodes/: declaration_specifier_nodes.h  declaration_specifiers.h  decls.h  enum.h  expressions.h  function_definition.h  initializer.h  node.h  pointer.h  statements.h  struct.h  translation_unit.h  type_name_cast.h
includes/symbols/: sym_type.h  sym_variable.h  symbol.h
src/: arguments.cpp  asm_directive.cpp  asm_element.cpp  asm_label.cpp  asm_section.cpp  assembly.cpp  commands.cpp  converter.cpp  data_type.cpp  evaluator.cpp  nodes.cpp  parser.cpp  scope_tree.cpp  semantic_analyzer.cpp  semantic_errors.cpp  sym_type.cpp  sym_variable.cpp  symbol.cpp  symbol_table.cpp  syntax_tree.cpp  token.cpp  tokenizer.cpp  type_builder.cpp
tests/: CMakeLists.txt  tokenizer_test.cpp
tests/generator/: 001.cpp  002.cpp  003.cpp  004.cpp  005.cpp  006.cpp  007.c  008.c  009.cpp  010.c  012.cpp  013.cpp  014.cpp  015.cpp  018.cpp  019.cpp  020.cpp  021.cpp  022.cpp  023.cpp  024.c  025.c  026.c  027.c  028.c  029.c  031.cpp  032.c  033.c  038.c  039.c  044.c  045.c  047.c  048.c  049.c  051.c  054.c  055.c  057.c  (+6 more)
tests/generator/expr/: 011.c  016.c  017.c  030.c  034.c  035.c  036.c  037.c  040.c  041.c  042.c  043.c  045.c  046.c  050.c  051.c
tests/generator/stmt/: 001.c  002.c  005.c  007.c  008.c  010.c  012.c  013.c  015.c  017.c  021.c  022.c  023.c  024.c  025.c
tests/parser/: 0.etalon  001.cpp  001.res  002.cpp  002.res  003.cpp  003.res  004.cpp  004.res  005.cpp  005.res  006.cpp  006.res  007.cpp  007.res  008.cpp  008.res  009.cpp  009.res  010.cpp  010.res  011.cpp  011.res  012.cpp  012.res  013.cpp  013.res  014.cpp  014.res  015.cpp  015.res  016.cpp  016.res  017.cpp  017.res  018.cpp  018.res  019.cpp  019.res  020.cpp  (+333 more)
tests/tokenizer/: 0.cpp  0.etalon  003.res  004.cpp  005.res  006.res  007.cpp  007.res  008.cpp  008.res  009.res  010.cpp  010.res  011.cpp  011.res  012.cpp  012.res  013.res  014.cpp  014.res  015.cpp  015.res  016.cpp  016.res  017.cpp  017.res  018.cpp  018.res  019.cpp  019.res  020.cpp  020.res  021.cpp  021.res  022.cpp  022.res  023.cpp  023.res  024.cpp  024.res  (+112 more)
tests/tokenizerEtalons/: 0.cpp.out.txt  1.cpp.out.txt  10.cpp.out.txt  11.cpp.out.txt  12.cpp.out.txt  13.cpp.out.txt  14.cpp.out.txt  15.cpp.out.txt  16.cpp.out.txt  17.cpp.out.txt  18.cpp.out.txt  19.cpp.out.txt  2.cpp.out.txt  20.cpp.out.txt  21.cpp.out.txt  22.cpp.out.txt  23.cpp.out.txt  24.cpp.out.txt  25.cpp.out.txt  26.cpp.out.txt  27.cpp.out.txt  28.cpp.out.txt  29.cpp.out.txt  3.cpp.out.txt  30.cpp.out.txt  31.cpp.out.txt  32.cpp.out.txt  33.cpp.out.txt  34.cpp.out.txt  35.cpp.out.txt  36.cpp.out.txt  37.cpp.out.txt  38.cpp.out.txt  39.cpp.out.txt  4.cpp.out.txt  40.cpp.out.txt  41.cpp.out.txt  42.cpp.out.txt  43.cpp.out.txt  44.cpp.out.txt  (+26 more)
tests/tokenizer_tests/: CMakeLists.txt  tokenizer_test.cpp
tests/tokenizer_tests/test_src/: 0.cpp
(+1 files in other folders)
